--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Zatoster/MarryBot/issues"
   },
-  "homepage": "https://github.com/Zatoster/MarryBot#readme"
+  "homepage": "https://github.com/Zatoster/MarryBot#readme",
+  "dependencies": {
+    "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0"
+  }
 }
